<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

 <modelVersion>4.0.0</modelVersion>
  <groupId>com.org.learningMaven</groupId>
  <artifactId>MadhuTest</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <packaging>jar</packaging>

  <name>TestProject</name>
  <url>http://maven.apache.org</url>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <profiles>
  <profile>
   <id>selective</id>
   <build>
    <plugins>
     <plugin>
      <artifactId>maven-compiler-plugin</artifactId>
      <version>3.5.1</version>
      <configuration>
       <source>1.7</source>
       <target>1.7</target>
       <useSystemClassLoader>false</useSystemClassLoader>
      </configuration>
     </plugin>
     <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-resources-plugin</artifactId>
      <version>2.6</version>
      <configuration>
       <encoding>UTF-8</encoding>
      </configuration>
     </plugin>

     <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-surefire-plugin</artifactId>
      <version>2.19.1</version>
      <executions>
       <execution>
        <id>acceptance-test</id>
        <phase>integration-test</phase>
        <goals>
         <goal>test</goal>
        </goals>
        <configuration>
         <forkCount>1</forkCount>
         <reuseForks>false</reuseForks>
         <argLine>-Duser.language=en -Xmx1024m -XX:MaxPermSize=256m -Dfile.encoding=UTF-8 -DskipSurefireReport=true -DskipSurefireReport=true</argLine>
         <useFile>false</useFile>
         <includes>
          <include>**/Cucumber_Runner.class</include>
         </includes>
         <testFailureIgnore>true</testFailureIgnore>
        </configuration>
       </execution>
      </executions>
     </plugin>
    </plugins>

    <testResources>
     <testResource>
      <directory>src/test/resources</directory>
      <filtering>true</filtering>
     </testResource>
    </testResources>
   </build>
  </profile>
  </profiles>
  
  <dependencies>
    
<dependency>
  <groupId>org.testng</groupId>
  <artifactId>testng</artifactId>
  <version>6.8</version>
  <scope>test</scope>
</dependency>

<dependency>
    <groupId>org.seleniumhq.selenium</groupId>
    <artifactId>selenium-java</artifactId>
    <version>2.53.0</version>
</dependency>  
    
    <dependency>
    <groupId>info.cukes</groupId>
    <artifactId>cucumber-junit</artifactId>
    <version>1.2.5</version>
</dependency>
<dependency>
    <groupId>info.cukes</groupId>
    <artifactId>cucumber-java</artifactId>
    <version>1.2.5</version>
</dependency>
<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-jvm-deps -->
<dependency>
    <groupId>info.cukes</groupId>
    <artifactId>cucumber-jvm-deps</artifactId>
    <version>1.0.5</version>
</dependency>

<!-- https://mvnrepository.com/artifact/info.cukes/gherkin -->
<dependency>
    <groupId>info.cukes</groupId>
    <artifactId>gherkin</artifactId>
    <version>2.12.2</version>
</dependency>

<dependency>
    <groupId>junit</groupId>
    <artifactId>junit</artifactId>
    <version>4.11</version>
    <scope>test</scope>
</dependency>
<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-picocontainer -->
 
<!-- https://mvnrepository.com/artifact/org.picocontainer/picocontainer -->
<!-- <dependency>
    <groupId>org.picocontainer</groupId>
    <artifactId>picocontainer</artifactId>
    <version>2.15</version>
</dependency> -->


    
  </dependencies>
  
</project>
